# iDMAnalysis

./: .gitignore  README.md  showVtxPos.py
analysis/: .gitignore  CMakeLists.txt  README.md  mCalcABCD.C  mCalcABCD.h  mCalcABCDProfiles.C  mCalcABCDRatios.C  mCutflowTables.C  mMainAnalysis.C  mMainAnalysis.h  mMake1DEffPlotsFromFile.C  mMake2DPlotsFromFile.h  mMakeTemplates.C  mMapABCDClosure.C  mMapABCDNormalization.h  mMapABCDSensitivity.C  mMapABCDSensitivity.h  mMapABCDSensitivityYearly.C  mMergeYears.h  mNminus1Analysis.C  mNminus1Analysis.h  mNminus1Plots.h  mSaveCanvases.C  mSaveCanvases.h  mScanABCD.C  mScanABCD.h  mSumGenWgts.C  mSumGenWgts.h  macroRun.cc  setup.sh
analysis/RDataFrameSelectors/: CosmicMuonAnalysis.h  RDFAnalysis.C  nMinus1Selector.C
analysis/Selectors/RDataFrame/: RDFAnalysis.C  RDFAnalysis.h  nMinus1Selector.h
analysis/Selectors/TSelectors/: Linkdef.h  mainAnalysisSelector.C  mainAnalysisSelector.h  mainAnalysisSelectorData.h  mainAnalysisSelectorDict.cxx
analysis/TSelectors/: mainAnalysisSelector.C
analysis/condor/: compress_codebase.sh  condor_exec.sh  condor_job.sub  condor_job_template.jdl  run_all_samples.sh  submit_condor.sh
analysis/configs/Nminus1/: RunNjets.json  cuts_JetPt.json  cuts_VtxChi2.json  cuts_VtxDr.json
analysis/configs/cuts/: CRdR.json  CRdRLarger.json  CRnJets.json  CRnJets_dxyNoCuts.json  CRnJets_dxyNoCuts_BTag.json  CRnJets_dxyNoCuts_JetPt.json  CRnJets_dxyNoCuts_NoPFIso.json  CosmicMuons_dxy0to50.json  CosmicMuons_dxy100to150.json  CosmicMuons_dxy150to250.json  CosmicMuons_dxy50to100.json  CosmicMuons_dxyInclusive.json  CosmicMuons_dzlt100.json  Pileup.json  SR.json  SRNoBTag.json  SRSmaller.json  SR_JERDown.json  SR_Nminus1_jetpt.json  SR_Nminus1_ptres.json  SR_Recoil17.json  SR_dxyNoCuts.json  SR_dxyNoCuts_NoPFIso.json  SR_dxyTightCuts.json  all_trigs.json  metnomutrig_cuts.json  mettrig_cuts.json
analysis/configs/macros/: CalcABCD.json  CalcABCDProfiles.json  CosmicMuons_pt10.json  CosmicMuons_pt25.json  CosmicMuons_pt25_LooserID.json  MakeCanvases.json  MakeEffCanvases.json  MakeEffPlots.json  MakeTemplates.json  MapABCDClosure.json  MapABCDNormalization.json  MergeAndCollectStacks.json  MergeYears.json  PUwgt_data.json  Run2DCutflow.json  Run2DCutflowDisplacementCorrs.json  Run2DCutflowSignifRangeJESDown.json  Run2DCutflowSignifRangeJESUp.json  Run2DCutflowVertexError.json  RunCutflow.json  RunCutflowEEPrefiring.json  RunCutflowJERDown.json  RunCutflowJERUp.json  RunCutflowJESDown.json  RunCutflowJESUp.json  RunCutflowMTandMmumuOnly.json  RunCutflowNminus1.json  RunCutflowNoPlots.json  RunCutflowPileup.json  RunNminus1PlotsLimited.json  SaveCanvases.json  ScanABCD.json  dsa_eff.json  dsa_eff_1.json
analysis/configs/plots/: DisplCorrelations.json  EEPrefiring.json  JESUp.json  METAndJets1D.json  MTandInvMass.json  MatchedMuons.json  MuonDxyAndMET.json  MuonDxyAndPFIso.json  MuonSeparation.json  MuonTrack.json  Muons.json  Nminus1_nPlanes.json  Nominal1D.json  Nominal2D.json  Pileup.json  Vertex1D.json  VertexAndMET1D.json  VertexAndMET2D.json  VtxSignificance1D.json  VtxSignificanceAndMET2D.json  VxyAndMET2D.json
analysis/cutflows/thirdrun/: backgrounds_full_CR_QCD.txt  backgrounds_full_SR_dR_0p6.txt  backgrounds_full_SR_dR_0p7.txt  backgrounds_full_SR_dR_1p0.txt  backgrounds_full_SR_nJets_4.txt  signal_CR_nJets.txt  signal_SR_dR_0p7.txt  signal_SR_nJets_2.txt  signal_SR_nJets_5.txt
analysis/data/: bTagSF_2016.csv  bTagSF_2017.csv  bTagSF_2018.csv
analysis/data/pileup/: PUWeights_2016.root  PUWeights_2018.root  pileup_QCD_2016.root  pileup_data_2016.root
analysis/data/trig_weights/: trig_weights_2016.root  trig_weights_2017.root  trig_weights_2018.root
analysis/data/zjetpileup/: zjetratio200.root  zjetratio800.root
analysis/macros/: mCalcABCD.C  mCalcABCDProfiles.C  mCalcABCDRatios.C  mCutflowTables.C  mMainAnalysis.C  mMake1DCanvasFromStacks.C  mMake1DEffCanvasFromStacks.C  mMake1DEffPlotsFromFile.C  mMake1DPlotsFromFile.C  mMake2DCanvasFromStacks.C  mMake2DPlotsFromFile.C  mMakeTemplates.C  mMapABCDClosure.C  mMapABCDNormalization.C  mMapABCDSensitivity.C  mMapABCDSensitivityYearly.C  mMergeAndCollectStacks.C  mMergeYears.C  mNminus1Analysis.C  mNminus1Plots.C  mSROptimization.C  mSaveCanvases.C  mScanABCD.C  mSumGenWgts.C
analysis/macros/deprecated/: calcSumGenWgt.C
analysis/scripts/: merge_cutflows.py  puwgt.C  run_all_CR_plots.sh
analysis/utils/: CMS_lumi_bak.C  ScaleFactors.cc  ScaleFactors.h  common.h  rapidcsv.h  scanSensitivity.C  tdrstyle.C
analysis/utils/plot_macros/: PlotABCDProfileComparisons.C  PlotABCDProfiles.C  PlotCosmicMuonEfficiency.C  PlotCosmicMuonEfficiency2D.C  PlotCosmicMuonEfficiencyMC.C  PlotCosmicMuonSF.C  PlotEEPrefiring.C  PlotGMRecoEffivsDSA.C  PlotGMRecoEffivsDSA2016_cfg.json  PlotGMRecoEffivsDSA2017_cfg.json  PlotGMRecoEffivsDSA_cfg.json  PlotGMRecoEffivsDSA_v2.C  PlotGenLevelComparisonMCVxy_5p25_2016_cfg.json  PlotGenLevelComparisonMCVxy_84p0_2017_cfg.json  PlotGenLevelValidation.C  PlotGenLevelValidationInvMass.C  PlotGenLevelValidationInvMassHighSplit_cfg.json  PlotGenLevelValidationInvMassLowSplit_cfg.json  PlotGenLevelValidationVxy3p15_cfg.json  PlotKfactors.C  PlotMuonObjectDr.C  PlotMuonObjectDr_cfg.json  PlotMuonObjectRecoEffi.C  (+6 more)
washAOD/macros/: CMakeLists.txt  RDFAnalysis.C  RDFAnalysis.h  README.md  SROptimization.C  backgrounds.json  backgrounds_full.json  backgrounds_subset.json  calcSumGenWgt.C  calcSumGenWgtFast.C  cutflowPlots.C  cutflowTable.C  cutflowTableFast.C  cutflowTableTest.C  mCalcABCD.C  mCalcABCDProfiles.h  mCalcABCDRatios.h  mCutflowTables.C  mCutflowTables.h  mMainAnalysis.C  mMainAnalysis.h  mMake1DEffPlotsFromFile.C  mMake1DEffPlotsFromFile.C.bk  mMake1DEffPlotsFromFile.h  mMake1DPlotsFromFile.C  mMake2DPlotsFromFile.C  mMake2DPlotsFromFile.h  mMakePlotsFromFile.C  mMakePlotsFromFile.h  mMakeTemplates.C  mMakeTemplates.h  mMapABCDClosure.C  mMapABCDClosure.h  mMapABCDNormalization.C  mMapABCDSensitivity.C  mMapABCDSensitivityYearly.C  mMapABCDSensitivityYearly.h  mMergeYears.C  mMergeYears.h  mNminus1Analysis.C  (+35 more)
(+1506 files in other folders)
